--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   http: ^0.12.0+1
   flutter_simple_dependency_injection: ^1.0.0
+  flutter_bloc_inject: ^0.0.3
 
 
   # The following adds the Cupertino Icons font to your application.
