--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,10 +11,9 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  http: ^0.12.0+1
-  flutter_simple_dependency_injection: ^1.0.0
-  flutter_bloc_inject: ^0.0.3
-
+  flutter_bloc_inject: ^1.0.1
+  rxdart: ^0.21.0
+  dio: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
